<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        
    <item android:id="@+id/moveToolbar"
          app:showAsAction="always"
          android:actionViewClass="android.widget.ImageButton"/>
    
    <item android:id="@+id/actionShowKeyboard"
          android:icon="@drawable/ic_keyboard"
          app:showAsAction="always"
          android:onClick="showKeyboard"
          android:padding="0dp"/>
    
    <item android:id="@+id/itemExtraKeys" android:title="@string/extra_keys_disable" android:icon="@drawable/extra_keys"/>
    <item android:numericShortcut="5" android:alphabeticShortcut="p" android:id="@+id/itemInputMode" android:title="@string/input_mode" android:icon="@android:drawable/ic_input_get">
    	<menu>
	    	<group android:checkableBehavior="single">
                <item android:id="@+id/itemInputTouchPanZoomMouse" android:title="@string/input_mode_touch_pan_zoom_mouse"/>
                <item android:id="@+id/itemInputDragPanZoomMouse" android:title="@string/input_mode_drag_pan_zoom_mouse"/>
                <item android:id="@+id/itemInputTouchpad" android:title="@string/input_mode_touchpad"/>
                <item android:id="@+id/itemInputSingleHanded" android:title="@string/input_mode_single_handed"/>
		</group>
	    </menu>
    </item>
    <item android:numericShortcut="4" android:alphabeticShortcut="z" android:id="@+id/itemScaling" android:title="@string/scaling" android:icon="@android:drawable/ic_menu_zoom">
    	<menu>
	    	<group android:id="@+id/groupScaling" android:checkableBehavior="single">
	    		<item android:id="@+id/itemZoomable" android:title="@string/scaling_zoomable" />
	    		<item android:id="@+id/itemFitToScreen" android:title="@string/fit_to_screen" android:checked="true"/>
                <item android:id="@+id/itemOneToOne" android:title="@string/one_to_one"/>
	    	</group>
    	</menu>
    </item>
    <item android:numericShortcut="7" android:alphabeticShortcut="x" android:id="@+id/itemDisconnect" android:title="@string/disconnect" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
    <item android:numericShortcut="1" android:alphabeticShortcut="k" android:id="@+id/itemSpecialKeys" android:title="@string/special_keys" android:icon="@android:drawable/ic_dialog_dialer"/>
    <item android:alphabeticShortcut="g" android:id="@+id/itemSendKeyAgain" android:title="@string/send_key_again"/>
    <item android:numericShortcut="8" android:alphabeticShortcut="r" android:id="@+id/itemCtrlAltDel" android:title="@string/ctrl_alt_del" android:icon="@android:drawable/ic_menu_share"/>
    <item android:id="@+id/itemEnterText" android:alphabeticShortcut="e" android:title="@string/enter_text" android:icon="@android:drawable/ic_menu_edit" />
    <!-- <group android:checkableBehavior="all">
    	<item android:numericShortcut="6" android:alphabeticShortcut="f" android:id="@+id/itemFollowMouse" android:title="@string/pan_follow_mouse"/>
    	<item android:title="@string/mouse_follow_pan" android:id="@+id/itemFollowPan"/>
    </group> -->
    <item android:numericShortcut="3" android:alphabeticShortcut="c" android:id="@+id/itemColorMode" android:title="@string/color_mode" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:numericShortcut="2" android:alphabeticShortcut="m" android:id="@+id/itemCenterMouse" android:title="@string/center_mouse" android:icon="@android:drawable/ic_menu_mylocation"/>    
    <item android:numericShortcut="9" android:alphabeticShortcut="i" android:id="@+id/itemInfo" android:title="@string/info" android:icon="@android:drawable/ic_menu_info_details"></item>
    <item android:id="@+id/itemHelpInputMode" android:title="@string/input_mode_help" android:icon="@android:drawable/ic_menu_help"/>
    <!-- <item android:id="@+id/itemOpenDoc" android:title="@string/open_doc" android:icon="@android:drawable/ic_menu_help"/> -->
</menu>
