<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:numericShortcut="1" android:alphabeticShortcut="c" android:id="@+id/itemSaveAsCopy" android:title="@string/save_as_copy"/>
    <item android:numericShortcut="2" android:alphabeticShortcut="d" android:id="@+id/itemDeleteConnection" android:title="@string/delete_connection"/>
    <item android:id="@+id/itemMainScreenHelp" android:title="@string/main_screen_help"/>
    <item android:id="@+id/itemExportImport" android:title="@string/import_export_settings"/>
    <item android:id="@+id/itemMasterPassword" android:title="@string/master_password_enable" android:checkable="true"/>
    <item android:id="@+id/itemKeepScreenOn" android:title="@string/keep_screen_awake_enable" android:checkable="true"/>
    <item android:id="@+id/itemDisableImmersive" android:title="@string/immersive_mode_disable" android:checkable="true"/>
</menu>