<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/black"> 
	<CheckBox
		android:id="@+id/checkboxUseDpadAsArrows"
	    android:text="@string/dpad_as_arrows"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	<CheckBox
		android:id="@+id/checkboxRotateDpad"
	    android:text="@string/rotate_dpad"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	<CheckBox
		android:id="@+id/checkboxUseLocalCursor"
	    android:text="@string/local_mouse_check"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	<RadioGroup
		android:id="@+id/groupForceFullScreen"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<RadioButton
			android:id="@+id/radioForceFullScreenAuto"
		    android:text="@string/auto"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		<RadioButton
			android:id="@+id/radioForceFullScreenOn"
		    android:text="@string/force"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	</RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/advanced_dismiss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/auto_x_confirm" />
    </LinearLayout>
</LinearLayout>
</ScrollView>