<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="5dip"
	android:orientation="vertical">
   	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button 
			android:id="@+id/buttonGO" 
			android:text="@string/connect_button"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="22sp"/>
		<Spinner 
			android:id="@+id/spinnerConnection"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>	
	<TableLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip">
		<TableRow>
		    <TextView
				android:text="Connection Type"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/> 
		</TableRow>
		<TableRow>
			<Spinner 
			    android:id="@+id/connectionType" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:entries="@array/rdp_connection_type"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/textNickname" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:singleLine="true" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium"
				android:hint="@string/nickname_caption_hint"/>
		</TableRow>
		<TableRow>
		    <TextView
			    android:id="@+id/sshCaption" 
				android:text="SSH Tunnel Settings"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/> 
		</TableRow>
		<TableRow>
	    	<LinearLayout
	    	    android:id="@+id/sshServerEntry"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1"
				android:visibility="gone">
				<EditText android:id="@+id/sshServer" android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium"
					android:hint="@string/address_caption_ssh_hint"	android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/sshPort"/>
				<EditText android:id="@+id/sshPort"
					android:text="22" android:hint="@string/port_ssh_hint" android:layout_width="wrap_content" 
					android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="0"
					android:textAppearance="?android:attr/textAppearanceMedium" android:nextFocusDown="@+id/sshUser"
					android:inputType="textNoSuggestions|textVisiblePassword"/>
			</LinearLayout>
		</TableRow>
		<TableRow>
	    	<LinearLayout
	    	    android:id="@+id/sshCredentials"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1"
				android:visibility="gone">
				<EditText android:id="@+id/sshUser"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight=".5" android:textAppearance="?android:attr/textAppearanceMedium"
					android:hint="@string/username_hint_ssh" android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/sshPassword"/>
				<EditText android:id="@+id/sshPassword"
				    android:password="true"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight=".5" android:textAppearance="?android:attr/textAppearanceMedium"
					android:hint="@string/password_hint_ssh" android:inputType="textNoSuggestions"/>
			</LinearLayout>
		</TableRow>
		<TableRow>
	    	<LinearLayout
				android:id="@+id/layoutUseSshPubkey"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1"
				android:visibility="gone">
				<Button	android:id="@+id/buttonGeneratePubkey" android:text="@string/ssh_pubkey_button"
					android:textAppearance="?android:attr/textAppearanceMedium" android:enabled="true"
					android:layout_width="fill_parent"	android:layout_weight=".4" android:layout_height="wrap_content"/>
				<CheckBox android:id="@+id/checkboxUseSshPubkey"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:text="@string/ssh_use_pubkey" android:layout_weight=".6" android:checked="false"
					android:textAppearance="?android:attr/textAppearanceMedium" android:singleLine="true"/>
			</LinearLayout>					
		</TableRow>
		<TableRow>
		    <TextView
				android:text="RDP Connection Settings"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/> 
		</TableRow>
		<TableRow>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1">
				<EditText android:id="@+id/textIP" android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium"
					android:hint="@string/address_caption_hint" android:nextFocusDown="@+id/textPORT"
					android:inputType="textNoSuggestions|textVisiblePassword"/>
				<EditText android:id="@+id/textPORT"
					android:text="3389" android:hint="@string/port_hint"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true"
					android:layout_weight="0" android:textAppearance="?android:attr/textAppearanceMedium"
					android:inputType="textNoSuggestions|textVisiblePassword"/>
			</LinearLayout>
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/textUsername" android:layout_width="fill_parent" 
				android:hint="@string/username_hint" android:layout_height="wrap_content"
				android:singleLine="true" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium"
				android:inputType="textNoSuggestions|textVisiblePassword"/>
		</TableRow>
		<TableRow>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1">
				<EditText android:id="@+id/textPASSWORD"
					android:password="true"
					android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" 
					android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium"
					android:hint="@string/password_caption_hint"
					android:inputType="textNoSuggestions"/>
				<CheckBox android:id="@+id/checkboxKeepPassword"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/keep_password_button"	android:layout_weight="0"
					android:textAppearance="?android:attr/textAppearanceMedium" android:singleLine="true"/>
			</LinearLayout>
		</TableRow>
		<!-- <TableRow>
			<Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>
		</TableRow> -->
	</TableLayout>
			
	<CheckBox
		android:id="@+id/checkboxUseDpadAsArrows"
	    android:text="@string/dpad_as_arrows"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	<CheckBox
		android:id="@+id/checkboxRotateDpad"
	    android:text="@string/rotate_dpad"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	<CheckBox
		android:id="@+id/checkboxUseLocalCursor"
	    android:text="@string/local_mouse_check"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"
	    android:layout_height="wrap_content"/>
	</LinearLayout>
</ScrollView>
