<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/black"> 
    <TextView
  	    android:id="@+id/instructAutoX"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/auto_x_caption"
  	    android:textAppearance="?android:attr/textAppearanceSmall"/>
	<Spinner 
	    android:id="@+id/spinnerAutoXType" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:entries="@array/auto_x_type"
		android:textAppearance="?android:attr/textAppearanceSmall"/>
    <Button
        android:id="@+id/buttonAutoXHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Help" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <ToggleButton
	        android:id="@+id/toggleAutoXAdvanced"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceSmall"/>
	    <TextView
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Show Advanced Settings"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutAdvancedSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
	    
	    <TextView
	  	    android:id="@+id/textDescriptGeom"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:text="@string/auto_x_descript_geom"
	  	    android:textAppearance="?android:attr/textAppearanceSmall"/>
	    
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <Spinner 
		        android:id="@+id/spinnerAutoXGeometry" 
		        android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
		        android:layout_weight="0.4"
			    android:entries="@array/auto_x_geometry"
	    	    android:textAppearance="?android:attr/textAppearanceSmall"/>
		    <EditText
		        android:id="@+id/autoXWidth"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	  	    <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="x"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    <EditText
		        android:id="@+id/autoXHeight"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
		
		<TextView
	  	    android:id="@+id/textDescriptSession"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:text="@string/auto_x_descript_session"
	  	    android:textAppearance="?android:attr/textAppearanceSmall"/>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <Spinner 
		        android:id="@+id/spinnerAutoXSession" 
		        android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
		        android:layout_weight="0"
			    android:entries="@array/auto_x_session"
	    	    android:textAppearance="?android:attr/textAppearanceSmall"/>
		    <EditText
		        android:id="@+id/autoXSessionProg"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
        <CheckBox 
            android:id="@+id/checkboxAutoXUnixpw"
            android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_x_unixpw"
            android:visibility="visible"            
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <CheckBox 
            android:id="@+id/checkboxAutoXUnixAuth"
            android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_x_unix_auth"
            android:visibility="visible"            
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/autoXCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/auto_x_cancel" />
        <Button
            android:id="@+id/autoXConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/auto_x_confirm" />
    </LinearLayout>
</LinearLayout>
</ScrollView>